# SmartCalc

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  SmartCalc.pro  m  main.cpp
include/: glwindow.h  grafic_window.h  helpdialog.h  log.h  mainwindow.h  parser.h
include/math/: math_func.h
src/: glwindow.cpp  grafic_window.cpp  helpdialog.cpp  log.cpp  main.cpp  mainwindow.cpp  parser.cpp
ui/: grafic_window.ui  helpdialog.ui  mainwindow.ui
